--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,9 +3,15 @@
     margin: 30px;
 }
 
-.menu-inline li{
-    display: inline-block;
-    margin: 5px;
+.menu-float li{
+    float: left;
+    margin: 0 15px;
+}
+
+.menu-float:after{
+    content: "";
+    display: block;
+    clear: both;
 }
 
 .center {
@@ -30,9 +36,24 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 570px;
 }
 
 .img-quote cite {
     display: block;
+}
+
+.float-right {
+    float: right;
+    width: 400px;
+    margin-left: 10px;
+}
+
+.clearfix:after {
+    content: "";
+    display: block;
+    clear: right;
+}
+
+.img-size {
+    width: 400px;
 }
